--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
             - 3000:3000
         volumes:
           - .:/app/
-        command: bash -c "cd /app && rm -rf /node_modules && yarn && yarn run build"
+        command: bash -c "cd /app && sudo rm -rf /node_modules && yarn && yarn run build"
         
