--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "12.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "axios": "^0.24.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "tui-image-editor": "3.15.2",
     "typescript": "4.1.2",
@@ -42,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@azure/identity": "^2.0.1",
+    "@azure/storage-blob": "12.8.0",
     "@tensorflow/tfjs": "3.11.0"
   }
 }
