--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
         image: node:14.17.0
         volumes:
           - .:/app/
-        command: bash -c "cd /app && rm -rf node_modules && yarn && yarn run build"
+        command: bash -c "cd /app && rm -rf node_modules && yarn --frozen-lockfile && yarn run build"
         
