--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "12.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "antd": "^4.17.4",
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,12 +25,19 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "prettier"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
     ]
   },
   "browserslist": {
@@ -45,6 +53,10 @@
     ]
   },
   "devDependencies": {
-    "@tensorflow/tfjs": "3.11.0"
+    "@tensorflow/tfjs": "3.11.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.3",
+    "prettier": "^2.5.1"
   }
 }
